refactor: :recycle: se acomodan algunas cosas

--- a/Vista/css/estilos.css
+++ b/Vista/css/estilos.css
@@ -67,8 +67,10 @@ body::-webkit-scrollbar {
 }
 footer {
 	margin-top: auto;
+	/* background-color: #f1f1f1; */
+	background-color: rgba(0, 0, 0, 0.2);
 }
-
+footer div	
 .logo-animado {
 	height: 50vh;
 	top: 50%;
